新增 评分组件 select组件 封装el-table

--- a/src/common/css/base.scss
+++ b/src/common/css/base.scss
@@ -1,3 +1,10 @@
+.label-container {
+  padding: 10px;
+  min-width: 70px;
+  text-align: left;
+
+}
+
 .flex-layout-column{
   display: flex;
   flex-direction: column;
