--- a/src/common/css/baseColor.scss
+++ b/src/common/css/baseColor.scss
@@ -1,1 +1,13 @@
-$blue-1:#00BFFF;
+//蓝色
+$blue-1:#66b1ff;
+$blue-2:#007fff;
+
+//红色
+$red-1:#f78989;
+$red-2:#f56c6c;
+
+//绿色
+$green-1:#85ce61;
+$green-2:#67c23a;
+
+
